refactor: List로 변경